# asdfasdf

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
include/: .scanner.hpp.swp  common.hpp  firstSet.hpp  followSet.hpp  parser.hpp  scanner.hpp  yoquesetreesignodepregunta.hpp
json/: json.h  rules.txt  table.json
src/: common.cpp  fisrtSet.cpp  followSet.cpp  parser.cpp  scanner.cpp  yoquesetreesignodepregunta.cpp
